fixed broken build; passing all test

--- a/uNhAddIns/uNhAddIns.Adapters.CommonTests/uNhAddIns.Adapters.CommonTests.csproj
+++ b/uNhAddIns/uNhAddIns.Adapters.CommonTests/uNhAddIns.Adapters.CommonTests.csproj
@@ -88,6 +88,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="NUnitEx, Version=1.0.6.0, Culture=neutral, PublicKeyToken=57e34ad207e9e5a3, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Lib\NUnitEx.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
