--- a/uNhAddIns/uNhAddIns.CastleAdapters.Tests/uNhAddIns.CastleAdapters.Tests.csproj
+++ b/uNhAddIns/uNhAddIns.CastleAdapters.Tests/uNhAddIns.CastleAdapters.Tests.csproj
@@ -79,6 +79,9 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="NUnitEx">
+      <HintPath>..\..\Lib\NUnitEx.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
