--- a/uNhAddIns/uNhAddIns.Test/uNhAddIns.Test.csproj
+++ b/uNhAddIns/uNhAddIns.Test/uNhAddIns.Test.csproj
@@ -84,6 +84,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="NUnitEx">
+      <HintPath>..\..\Lib\NUnitEx.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
